[package]
name = "maud-heroicons"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maud = "0.27.0"

[build-dependencies]
gix = { version = "0.73.0", default-features = false, features = [
    "worktree-mutation",
    "blocking-network-client",
    "blocking-http-transport-reqwest-rust-tls",
] }
html2maud = "0.1.11"
